--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,14 @@
 
+# suppress inspection "UnusedProperty" for whole file
+spring.datasource.url                           = jdbc:mariadb://localhost:3306/creditdb
+spring.config.import                            = optional:secrets.properties
+spring.datasource.driver-class-name             = org.mariadb.jdbc.Driver
+spring.datasource.testWhileIdle                 = true
+spring.datasource.timeBetweenEvictionRunsMillis = 28000000
+spring.datasource.validationQuery               = SELECT 1
+logging.level.org.hibernate.SQL                 = DEBUG
+logging.level.org.hibernate.type                = TRACE
+spring.jpa.show-sql                             = true
+
+server.servlet.context-path=/creditcard
+server.port=9090
